--- a/src/Containers/Calendar/Calendar.css
+++ b/src/Containers/Calendar/Calendar.css
@@ -26,7 +26,6 @@ header {
     align-items: center;
     color: var(--cantoWhite);
     cursor: default;
-    font-size:1.4rem;
     display: block;
     font-weight: bold;
     text-transform: uppercase;
@@ -41,6 +40,11 @@ header {
 
 .month-label { 
    flex: 1;
+}
+
+.month-label h2 { 
+   color: var(--cantoWhite);
+   font-size: 1.1em;
 }
 
 .arrow {
